--- a/index.html
+++ b/index.html
@@ -5,46 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
 
-  30-day, hassle-free money back guarantee
+  <div class="container">
+    <header id="main-header">
+      <h1 class="primary">Join our community</h1>
+      <p class="secondary">30-day, hassle-free money back guarantee</p>
+      <p class="gray small-text">
+        Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.
+      </p>
+    </header>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+    <section id="price">
+      <h2>Monthly Subscription</h2>
+      <p><span class="large-text">&dollar;29</span><span class="off-white"> &nbsp per month</span></p>
+      <p class="small-text">Full access for less than &dollar;1 a day</p>
+      <a class="btn" href="#">Sign Up</a>
+    </section>
 
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
+    <section class="why-us">
+      <h2>Why Us</h2>
+      <p>Tutorials by industry experts</p>
+      <p>Peer &amp; expert code review</p>
+      <p>Coding exercises</p>
+      <p>Access to our GitHub repos</p>
+      <p>Community forum</p>
+      <p>Flashcard decks</p>
+      <p>New videos every week</p>
+    </section>
+  </div>
+<!--   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Sabreen Essam</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
